# toolbox

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hardware.rs  lib.rs  modifier.rs
src/components/: ActionBar.vue  IdentifierCard.vue  Toast.vue  UpdateChecker.vue
src/lib/: commands.ts  types.ts
src/router/: index.ts
src/views/: Home.vue  MachineCode.vue
