[package]
name = "toolbox"
version = "0.2.0"
description = "工具箱"
authors = ["you"]
edition = "2021"

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
mac_address = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
